# kiran-authentication-devices

./: .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md
data/: CMakeLists.txt  com.kylinsec.Kiran.AuthDevice.Device.conf  com.kylinsec.Kiran.AuthDevice.Device.xml  com.kylinsec.Kiran.AuthDevice.conf  com.kylinsec.Kiran.AuthDevice.xml  config.h.in  device.conf  driver.conf  drivers.conf  kiran-authentication-devices.service.in  third-party-devices.conf  ukey-manager.conf
include/: SYProtocol.h  auth-enum.h  irs_param_defs.h  irsdk1.h  irsdk2.h  kiran-auth-device-i.h  sdfv.h  third-party-device.h  ukey-skf.h  zkfp.h
src/: CMakeLists.txt  auth-device-manager.cpp  auth-device-manager.h  config-helper.cpp  config-helper.h  feature-db.cpp  feature-db.h  main.cpp  polkit-proxy.cpp  polkit-proxy.h  udev-monitor.cpp  udev-monitor.h  utils.cpp  utils.h
src/context/: context-factory.cpp  context-factory.h  context.cpp  context.h  multi-function-context.cpp  multi-function-context.h
src/context/finger-vein/: fv-sd-context.cpp  fv-sd-context.h
src/context/fingerprint/: fp-builtin-context.cpp  fp-builtin-context.h  fp-context-factory.cpp  fp-context-factory.h  fp-zk-context.cpp  fp-zk-context.h
src/context/ukey/: ukey-ft-context.cpp  ukey-ft-context.h
src/device/: auth-device.cpp  auth-device.h  bio-device.cpp  bio-device.h  device-creator.cpp  device-creator.h
src/device/finger-vein/: fv-sd-device.cpp  fv-sd-device.h
src/device/fingerprint/: fp-builtin-device.cpp  fp-builtin-device.h  fp-device.cpp  fp-device.h  fp-za-device.cpp  fp-za-device.h  fp-zk-device.cpp  fp-zk-device.h
src/device/multi-function/: mf-iristar-device.cpp  mf-iristar-device.h
src/device/ukey/: ukey-ft-device.cpp  ukey-ft-device.h  ukey-skf-device.cpp  ukey-skf-device.h
src/driver/: driver-factory.cpp  driver-factory.h  driver.cpp  driver.h
src/driver/finger-vein/: fv-sd-driver.cpp  fv-sd-driver.h
src/driver/fingerprint/: fp-driver.cpp  fp-driver.h  fp-za-driver.cpp  fp-za-driver.h  fp-zk-driver.cpp  fp-zk-driver.h
src/driver/multi-function/: mf-iristar-driver.cpp  mf-iristar-driver.h
src/driver/ukey/: ukey-skf-driver.cpp  ukey-skf-driver.h
translations/: kiran-authentication-devices.zh_CN.ts
ukey-manager/: CMakeLists.txt  main.cpp  ukey-manager.cpp  ukey-manager.h
ukey-manager/translations/: kiran-ukey-manager.zh_CN.ts
